# trabajo

./: .gitignore  demo.html
call-04/: 00_iri.tar  Dima notes  Goal_Precise.docx  HFPart_ERT_20200415.tar  cloud_placement.pptx
call-04/HFPart/: HF_RayTrace.c  Make.flags.Linux  Makefile  QPS_Model.h  QPSegment.c  generalUtils.c  hfpart_constants.h  interp_routines.c  log_testProfile.txt  spline.c  spline.h  testHomingRays.c  testRayPath.c
call-04/HFPart 2/: HF_ART_Homing.c  QPS_Model.c  QPSegment.h  RayTrace.h  log_testHoming.txt  log_testRayPath.txt  testHoming.c  testPOETbox.c  testProfile.c
call-04/Send_RIPE/: setup.sh  testIonoState_0312.txt
call-04/Send_RIPE/Documentation/: alfa_env.yml
call-04/Send_RIPE/Framework/: Manager.py  QueryIono.py
call-04/Send_RIPE/IonoModelEngine/: GetProfileParameters.py
call-04/Send_RIPE/IonoModelEngine/Config/: ConfigDef.py  ConfigValues.py  KentIsland_201803.py  KentIsland_test_20180320.py
call-04/Send_RIPE/IonoModelEngine/DataControl/: DataController.py  GIRODataManager.py  NOAADataManager.py  Stations.py
call-04/Send_RIPE/IonoModelEngine/Fit/: FitProfile.py  GetProfileParameters.py  SaoPyIface.py
call-04/Send_RIPE/IonoModelEngine/Fit/lib/: libsaopy_mac.dylib
call-04/Send_RIPE/IonoModelEngine/Fit/source/: CMakeLists.txt  Makefile  saoread.f  saoreadc.cpp  saoreadc.h
call-04/Send_RIPE/IonoModelEngine/Fit/test_data/: BC840_2017041060005.SAO  BC840_2017041060005.txt
call-04/Send_RIPE/IonoModelEngine/IRTAM/: IRTAM.py  IrtamPyIface.py  Niue.py
call-04/Send_RIPE/IonoModelEngine/IRTAM/UnitTestData/: IRTAM_B0_COEFFS_20151020_0000.ASC  IRTAM_B0_COEFFS_20151101_0000.ASC  IRTAM_B0_COEFFS_20151101_0100.ASC  IRTAM_B0_COEFFS_20151101_0200.ASC  IRTAM_B0_COEFFS_20151101_0300.ASC  IRTAM_B0_COEFFS_20151101_0400.ASC  IRTAM_B0_COEFFS_20151101_0500.ASC  IRTAM_B0_COEFFS_20151101_0600.ASC  IRTAM_B0_COEFFS_20151101_0700.ASC  IRTAM_B0_COEFFS_20151101_0800.ASC  IRTAM_B0_COEFFS_20151101_0900.ASC  IRTAM_B0_COEFFS_20151101_1000.ASC  IRTAM_B0_COEFFS_20151101_1100.ASC  IRTAM_B0_COEFFS_20151101_1200.ASC  IRTAM_B0_COEFFS_20151101_1300.ASC  IRTAM_B0_COEFFS_20151101_1400.ASC  IRTAM_B0_COEFFS_20151101_1500.ASC  IRTAM_B0_COEFFS_20151101_1600.ASC  IRTAM_B0_COEFFS_20151101_1700.ASC  IRTAM_B0_COEFFS_20151101_1800.ASC  IRTAM_B0_COEFFS_20151101_1900.ASC  IRTAM_B0_COEFFS_20151101_2000.ASC  IRTAM_B0_COEFFS_20151101_2100.ASC  IRTAM_B0_COEFFS_20151101_2200.ASC  IRTAM_B0_COEFFS_20151101_2300.ASC  IRTAM_B0_COEFFS_20160401_0000.ASC  IRTAM_B0_COEFFS_20160401_0100.ASC  IRTAM_B0_COEFFS_20160401_0200.ASC  IRTAM_B0_COEFFS_20160401_0300.ASC  IRTAM_B0_COEFFS_20160401_0400.ASC  IRTAM_B0_COEFFS_20160401_0500.ASC  IRTAM_B0_COEFFS_20160401_0600.ASC  IRTAM_B0_COEFFS_20160401_0700.ASC  IRTAM_B0_COEFFS_20160401_0800.ASC  IRTAM_B0_COEFFS_20160401_0900.ASC  IRTAM_B0_COEFFS_20160401_1000.ASC  IRTAM_B0_COEFFS_20160401_1100.ASC  IRTAM_B0_COEFFS_20160401_1200.ASC  IRTAM_B0_COEFFS_20160401_1300.ASC  IRTAM_B0_COEFFS_20160401_1400.ASC  (+346 more)
call-04/Send_RIPE/IonoModelEngine/IRTAM/lib/: libirtampy_mac.dylib
call-04/Send_RIPE/IonoModelEngine/IRTAM/source/: CMakeLists.txt  Makefile  ProcessIrtam.f  processirtam.cpp  processirtam.h
call-04/Send_RIPE/IonoModelEngine/IRTAM/test_data/: IRTAM_hmF2_COEFFS_20140119_1545.ASC
call-04/Send_RIPE/IonoModelEngine/RIPE/: RIPE.py  RIPEInput.py  RIPE_map.py
call-04/Send_RIPE/IonoModelEngine/RIPE/TestFiles/: AU930_NOAA.TXT  BC840_NOAA.TXT  EG931_NOAA.TXT
call-04/Send_RIPE/IonoModelEngine/ROAM/: ROAM.py
call-04/Send_RIPE/IonoModelEngine/ROAM/UnitTestData/: IRTAM_B1_COEFFS_20151020_0000.ASC  IRTAM_hmF2_COEFFS_20151020_0000.ASC
call-04/Send_RIPE/Shared/Config/: ConfigDef.py  ConfigValues.py
call-04/Send_RIPE/Shared/GridGeneration/: __init__.py  build.sh  igrf12grid.f90  pfProfileToEnGrid.f90
call-04/Send_RIPE/Shared/IRITestCoef/iri2016/: README
call-04/Send_RIPE/Shared/IonoPyIface/: Pharlap.py  PharlapPytoCIface.py  build.sh
call-04/Send_RIPE/Shared/IonoPyIface/lib/: libionopyiface_mac.dylib
call-04/Send_RIPE/Shared/IonoPyIface/source/: CMakeLists.txt  IonoPyIface.cpp  IonoPyIface.h
call-04/Send_RIPE/Shared/Utils/: Constants.py  DateTime.py  Geodesy.py  HfgeoLogger.py
call-04/Send_RIPE/tmp/giroData/: IRTAM_B0_COEFFS_20151020_0000.ASC  IRTAM_B1_COEFFS_20151020_0000.ASC  IRTAM_foF2_COEFFS_20151020_0000.ASC  IRTAM_hmF2_COEFFS_20151020_0000.ASC
call-04/Send_RIPE/tmp/ripeInput/: AL945_NOAA.TXT  BC840_NOAA.TXT  EG931_NOAA.TXT  PA836_NOAA.TXT
call-04/files 2/: output.csv  output.xlsx
call-04/iri/: Appendix - Compilation environment.rtf  igrf-array-errors.rtf  iri-array-errors.rtf  irifun-array-errors.rtf  irisub-array-errors.rtf
minutes/: AFRL SESDMA BAA 2020 03 16  AFRL SESDMA BAA 2020 03 23
msr/2020-02/: MSRFeb2020.pptx  call-01-msr-submission-2020-02.txt  call-04-msr-submission-2020-02.txt  msr-bc-2020-02.txt  msr-chris-2020-02.txt  msr-matt-2020-02.txt  msr-trevor-2020-02.txt
msr/2020-03/: bc.txt  call-01-msr-submission-2020-03.txt  call-04-msr-submission-2020-03.txt  chris.txt  jon.txt  matt.txt
msr/2020-04/: bc.txt  call-01-msr-submission-2020-05.txt  call-01-msr-submission-2020-06.txt  call-04-msr-submission-2020-04.txt  chris.txt  jon.txt  matt.txt
rcs/: Bonito5000.json  Bonito5000.xlsx  Call 04 Scrum 2020 03 17.txt  matrix specifications.txt  sciacca-airframe
rcs/Hg/models/B-20/input/: B-20-standard-0.05m.facet  B-20-standard-0.1m.facet  B-20-standard-1m.facet  template-B-20.geo
rcs/Hg/models/B-20A/input/: B-20A-S-0050m.facet  B-20A-S-0100m.facet  B-20A-S-1000m.facet  template-B-20A.geo
rcs/Hg/models/PTW/input/: PTW.geo
rcs/Hg/scripts/: MoM-sweep.sh
rcs/JS/: chris-01.html  latex.html  test.html  test40.html
rcs/SENTRi/: info.txt
rcs/nelson/: e-mail-01.txt  e-mail-02.txt  may 13 status.txt  morning-talk.txt
rcs/sandbox/3D rcs/: script-output.txt
rcs/sandbox/3D rcs/src/: geo-writer.f08  geo_writer  m_file_handling.f08  m_format_descriptors.f08  m_quarry.f08  m_string_toolkit.f08  m_writer_batch_command.f08  m_writer_geo.f08  makefile
rcs/sprint/: 2020-Apr-01.txt
(+312 files in other folders)
